fix padding on mobile for section (shadows)

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -39,6 +39,7 @@
 
   section {
     margin: 0 5%;
+    padding: 2vh;
   }
 
   .section__pic-container {
